--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
   "name": "json-server",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start": "node --harmony server/app"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "URLON": "^2.0.0",
+    "json-schema-faker": "^0.4.0",
+    "koa": "^2.0.0",
+    "koa-bodyparser": "^4.1.0",
+    "koa-static": "^3.0.0",
+    "lodash": "^4.17.4",
+    "lz-string": "^1.4.4",
+    "pug": "^2.0.0-beta11"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^2.28.0",
+    "pug-loader": "^2.3.0",
+    "webpack": "^2.2.1"
+  }
 }
