--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "json-schema-faker": "^0.4.0",
     "koa": "^2.0.0",
     "koa-bodyparser": "^4.1.0",
+    "koa-router": "^7.0.1",
     "koa-static": "^3.0.0",
     "lodash": "^4.17.4",
     "lz-string": "^1.4.4",
